compiler/tests/fixtures/compile_errors/duplicate_typedef_in_module.fe

type bar = u8

type bar = u8

contract Foo:

    pub def bar():
        pass
